@@ -23,10 +23,10 @@ import com.opencsv.CSVReader;
 import com.opencsv.CSVReaderBuilder;
 import com.opencsv.ICSVParser;
 import com.opencsv.exceptions.CsvException;
-import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.StringUtils;
+import jakarta.annotation.Nonnull;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.BooleanUtils;
 
-import javax.annotation.Nonnull;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.IOException;
@@ -34,19 +34,21 @@ import java.sql.SQLException;
 import java.sql.SQLSyntaxErrorException;
 import java.sql.Types;
 import java.text.ParseException;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static com.ing.data.cassandra.jdbc.commands.SpecialCommandsUtil.LOG;
 import static com.ing.data.cassandra.jdbc.commands.SpecialCommandsUtil.translateFilename;
 import static com.ing.data.cassandra.jdbc.utils.DriverUtil.COMMA;
+import static com.ing.data.cassandra.jdbc.utils.DriverUtil.DOT;
 import static com.ing.data.cassandra.jdbc.utils.DriverUtil.DURATION_FORMAT_PATTERN;
 import static com.ing.data.cassandra.jdbc.utils.DriverUtil.DURATION_ISO8601_ALT_FORMAT_PATTERN;
 import static com.ing.data.cassandra.jdbc.utils.DriverUtil.DURATION_ISO8601_FORMAT_PATTERN;
@@ -59,7 +61,13 @@ import static com.ing.data.cassandra.jdbc.utils.ErrorConstants.CSV_FILE_NOT_FOUN
 import static com.ing.data.cassandra.jdbc.utils.ErrorConstants.MISSING_COLUMN_DEFINITIONS;
 import static com.ing.data.cassandra.jdbc.utils.WarningConstants.ADD_STATEMENT_TO_BATCH_FAILED;
 import static com.ing.data.cassandra.jdbc.utils.WarningConstants.PARSING_VALUE_FAILED;
+import static java.lang.Boolean.parseBoolean;
+import static java.lang.String.format;
+import static java.lang.String.join;
+import static java.util.stream.Collectors.toSet;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
+import static org.apache.commons.lang3.StringUtils.defaultIfBlank;
+import static org.apache.commons.lang3.StringUtils.isBlank;
 import static org.apache.commons.lang3.StringUtils.wrap;
 
 /**
@@ -73,6 +81,15 @@ import static org.apache.commons.lang3.StringUtils.wrap;
  *     <ul>
  *         <li>{@code BATCHSIZE}: the number of rows inserted in a single batch.
  *         Defaults to {@value #DEFAULT_BATCH_SIZE}.</li>
+ *         <li>{@code BOOLSTYLE}: the boolean indicators for True and False. The value must be a comma-separated string
+ *         of two indicators where the first one is for True values. For example: yes,no. The values are not
+ *         case-sensitive. If the provided value is invalid, the default style will be applied.
+ *         Defaults to {@value #DEFAULT_BOOLEAN_STYLE}.</li>
+ *         <li>{@code DATETIMEFORMAT}: the format for reading time data. The timestamp uses the
+ *         <a href="https://www.bairesdev.com/tools/strftime/">strftime</a> format. Note that codes {@code %c},
+ *         {@code %x} and {@code %X} are not supported. Also, the code {@code %w} corresponds to the weekday number in
+ *         Java (Monday = 1 ... Sunday = 7). English locale is used to parse days and months names.
+ *         Defaults to {@value #DEFAULT_DATETIME_STRFTIME_FORMAT}.</li>
  *         <li>{@code DECIMALSEP}: the character that is used as the decimal point separator.
  *         Defaults to {@value #DEFAULT_DECIMAL_SEPARATOR}.</li>
  *         <li>{@code DELIMITER}: the character that is used to separate fields.
@@ -104,10 +121,8 @@ import static org.apache.commons.lang3.StringUtils.wrap;
  * <p>
  *     The following options are not supported:
  *     <ul>
- *         <li>{@code BOOLSTYLE}</li>
  *         <li>{@code CHUNKSIZE}</li>
  *         <li>{@code CONFIGFILE}</li>
- *         <li>{@code DATETIMEFORMAT}</li>
  *         <li>{@code ERRFILE}</li>
  *         <li>{@code INGESTRATE}</li>
  *         <li>{@code MAXATTEMPTS}</li>
@@ -143,9 +158,11 @@ import static org.apache.commons.lang3.StringUtils.wrap;
  * <p>
  *     Insertions in date, time and timestamp columns expect the format used in the imported CSV file follows the
  *     Cassandra CQL standard for these types, i.e. respectively: {@value DEFAULT_DATE_FORMAT},
- *     {@value DEFAULT_TIME_FORMAT} and {@value DEFAULT_DATETIME_FORMAT}.
+ *     {@value DEFAULT_TIME_FORMAT} and {@value DEFAULT_DATETIME_FORMAT} (if another format is not specified in the
+ *     parameter {@code DATETIMEFORMAT}).
  * </p>
  */
+@Slf4j
 public class CopyFromCommandExecutor extends AbstractCopyCommandExecutor {
 
     private static final int DEFAULT_BATCH_SIZE = 20;
@@ -171,10 +188,12 @@ public class CopyFromCommandExecutor extends AbstractCopyCommandExecutor {
      *                  instance.
      * @throws SQLSyntaxErrorException if an unknown option is used.
      */
-    public CopyFromCommandExecutor(@Nonnull final String tableName, final String columns, @Nonnull final String origin,
+    public CopyFromCommandExecutor(@Nonnull final String tableName,
+                                   final String columns,
+                                   @Nonnull final String origin,
                                    @Nonnull final Properties options) throws SQLSyntaxErrorException {
         this.tableName = tableName;
-        this.columns = StringUtils.defaultIfBlank(columns, EMPTY);
+        this.columns = defaultIfBlank(columns, EMPTY);
         this.origin = origin;
         this.options = options;
 
@@ -201,24 +220,23 @@ public class CopyFromCommandExecutor extends AbstractCopyCommandExecutor {
 
         final CassandraStatement insertStatement = (CassandraStatement) connection.createStatement();
 
-        final boolean hasHeaders = Boolean.parseBoolean(this.options.getProperty(OPTION_HEADER));
-        final Set<String> skippedColumns = Arrays.stream(((String) this.options.getOrDefault(OPTION_SKIPCOLS, EMPTY))
-                .split(COMMA))
+        final boolean hasHeaders = parseBoolean(this.options.getProperty(OPTION_HEADER));
+        final Set<String> skippedColumns =
+            Arrays.stream(((String) this.options.getOrDefault(OPTION_SKIPCOLS, EMPTY)).split(COMMA))
             .map(String::trim)
-            .collect(Collectors.toSet());
+            .collect(toSet());
         final int batchSize = getOptionValueAsInt(OPTION_BATCHSIZE, DEFAULT_BATCH_SIZE);
-
-        CSVReader csvReader = null;
 
         int executedBatches = 0;
         final int importedRows;
         int skippedRows = getOptionValueAsInt(OPTION_SKIPROWS, DEFAULT_SKIPPED_ROWS);
 
-        try {
-            csvReader = new CSVReaderBuilder(new FileReader(translateFilename(this.origin)))
+        try (
+            final CSVReader csvReader = new CSVReaderBuilder(new FileReader(translateFilename(this.origin)))
                 .withSkipLines(skippedRows)
                 .withCSVParser(configureCsvParser())
-                .build();
+                .build()
+        ) {
             final List<String[]> allRows = csvReader.readAll();
 
             final Map<Integer, String> csvColumns;
@@ -245,12 +263,11 @@ public class CopyFromCommandExecutor extends AbstractCopyCommandExecutor {
             importedRows = maxRows - startRow;
             skippedRows += allRows.size() - importedRows - startRow;
         } catch (final FileNotFoundException e) {
-            throw new SQLException(String.format(CSV_FILE_NOT_FOUND, this.origin), e);
+            throw new SQLException(format(CSV_FILE_NOT_FOUND, this.origin), e);
         } catch (final IOException | CsvException e) {
-            throw new SQLException(String.format(CANNOT_READ_CSV_FILE, this.origin, e.getMessage()), e);
+            throw new SQLException(format(CANNOT_READ_CSV_FILE, this.origin, e.getMessage()), e);
         } finally {
             insertStatement.close();
-            IOUtils.closeQuietly(csvReader);
         }
 
         return buildCopyCommandResultSet("imported from", importedRows, executedBatches, skippedRows);
@@ -272,7 +289,7 @@ public class CopyFromCommandExecutor extends AbstractCopyCommandExecutor {
         try {
             String keyspaceName = connection.getSchema();
             String tableName = this.tableName;
-            if (this.tableName.contains(".")) {
+            if (this.tableName.contains(DOT)) {
                 final String[] keyspaceAndTable = this.tableName.split("\\.");
                 keyspaceName = keyspaceAndTable[0];
                 tableName = keyspaceAndTable[1];
@@ -291,8 +308,8 @@ public class CopyFromCommandExecutor extends AbstractCopyCommandExecutor {
     }
 
     private void setTargetColumnsIfNotSpecified() {
-        if (StringUtils.isBlank(this.columns)) {
-            this.columns = String.join(COMMA, this.columnsTypesInTargetTable.keySet());
+        if (isBlank(this.columns)) {
+            this.columns = join(COMMA, this.columnsTypesInTargetTable.keySet());
         }
     }
 
@@ -300,7 +317,7 @@ public class CopyFromCommandExecutor extends AbstractCopyCommandExecutor {
         return Arrays.stream(this.columns.split(COMMA))
             .map(String::trim)
             .filter(col -> !skippedColumns.contains(col))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private Map<Integer, String> mapColumnsFromArray(final String[] columnsNames) {
@@ -324,18 +341,18 @@ public class CopyFromCommandExecutor extends AbstractCopyCommandExecutor {
                 values.add(o);
             }
         }
-        final String cql = String.format("INSERT INTO %s(%s) VALUES (%s)", this.tableName,
+        final String cql = format("INSERT INTO %s(%s) VALUES (%s)", this.tableName,
             csvColumns.values().stream()
                 .filter(columnsToImport::contains)
                 .collect(Collectors.joining(COMMA)),
-            String.join(COMMA, values));
+            join(COMMA, values));
         try {
             statement.addBatch(cql);
-            if (LOG.isTraceEnabled() || statement.getCassandraConnection().isDebugMode()) {
-                LOG.trace("Added to batch: {}", cql);
+            if (log.isTraceEnabled() || statement.getCassandraConnection().isDebugMode()) {
+                log.trace("Added to batch: {}", cql);
             }
         } catch (final SQLException e) {
-            LOG.warn(ADD_STATEMENT_TO_BATCH_FAILED, cql, e);
+            log.warn(ADD_STATEMENT_TO_BATCH_FAILED, cql, e);
         }
     }
 
@@ -347,9 +364,21 @@ public class CopyFromCommandExecutor extends AbstractCopyCommandExecutor {
             final Number number = this.decimalFormat.parse(strValue.trim());
             return number.toString();
         } catch (final ParseException e) {
-            LOG.warn(PARSING_VALUE_FAILED, strValue);
+            log.warn(PARSING_VALUE_FAILED, strValue);
         }
         return null;
+    }
+
+    private String handleBooleanValue(final String strValue) {
+        if (strValue == null) {
+            return null;
+        }
+        if (this.trueValueFormat.equalsIgnoreCase(strValue)) {
+            return BooleanUtils.TRUE;
+        } else if (this.falseValueFormat.equalsIgnoreCase(strValue)) {
+            return BooleanUtils.FALSE;
+        }
+        return BooleanUtils.FALSE;
     }
 
     private String parseValue(final String value, final Integer colType) {
@@ -357,45 +386,32 @@ public class CopyFromCommandExecutor extends AbstractCopyCommandExecutor {
             return null;
         }
         switch (colType) {
-            case Types.BIT:
-            case Types.BOOLEAN:
-                return String.valueOf(Boolean.parseBoolean(value));
-            case Types.BIGINT:
-            case Types.DECIMAL:
-            case Types.NUMERIC:
-            case Types.REAL:
-            case Types.FLOAT:
-            case Types.DOUBLE:
-            case Types.INTEGER:
-            case Types.SMALLINT:
-            case Types.TINYINT:
+            case Types.BIT, Types.BOOLEAN:
+                return handleBooleanValue(value);
+            case Types.BIGINT, Types.DECIMAL, Types.NUMERIC, Types.REAL, Types.FLOAT, Types.DOUBLE, Types.INTEGER,
+                 Types.SMALLINT, Types.TINYINT:
                 return handleNumberValue(value);
-            case Types.DATE:
+            case Types.DATE, Types.TIME, Types.TIME_WITH_TIMEZONE,
+                 Types.NVARCHAR, Types.NCHAR, Types.LONGNVARCHAR, Types.LONGVARCHAR, Types.VARCHAR, Types.CHAR,
+                 Types.DATALINK:
                 // We assume here the date values respect the default date format supported by Cassandra CQL.
-            case Types.TIME:
-            case Types.TIME_WITH_TIMEZONE:
                 // We assume here the time values respect the default time format supported by Cassandra CQL.
-            case Types.TIMESTAMP:
-            case Types.TIMESTAMP_WITH_TIMEZONE:
-                // We assume here the date-time values respect the default date-time format supported by Cassandra CQL.
-            case Types.NVARCHAR:
-            case Types.NCHAR:
-            case Types.LONGNVARCHAR:
-            case Types.LONGVARCHAR:
-            case Types.VARCHAR:
-            case Types.CHAR:
-            case Types.DATALINK:
                 return wrap(value, SINGLE_QUOTE);
-            case Types.BINARY:
-            case Types.VARBINARY:
-            case Types.LONGVARBINARY:
-            case Types.BLOB:
-            case Types.CLOB:
-            case Types.NCLOB:
+            case Types.TIMESTAMP, Types.TIMESTAMP_WITH_TIMEZONE:
+                try {
+                    final DateTimeFormatter parsingFormat =
+                        DateTimeFormatter.ofPattern(this.dateTimeFormat, Locale.ENGLISH);
+                    final DateTimeFormatter dtFormat = DateTimeFormatter.ofPattern(DEFAULT_DATETIME_FORMAT);
+                    final var parsedTs = parsingFormat.parse(value);
+                    return wrap(dtFormat.format(parsedTs), SINGLE_QUOTE);
+                } catch (final Exception e) {
+                    log.warn(PARSING_VALUE_FAILED, value);
+                    return wrap(value, SINGLE_QUOTE);
+                }
+            case Types.BINARY, Types.VARBINARY, Types.LONGVARBINARY, Types.BLOB, Types.CLOB, Types.NCLOB:
                 // We assume blob values are represented as text in imported CSV files.
-                return String.format("textAsBlob('%s')", value);
-            case Types.ARRAY:
-            case Types.OTHER:
+                return format("textAsBlob('%s')", value);
+            case Types.ARRAY, Types.OTHER:
                 // We assume the format provided for collection types (tuples, maps, arrays, ...) is correct and does
                 // not require any transformation.
                 if (value.matches("[\\[({].*[])}]")) {
